<resources>
    <string name="app_name">Starwars</string>

    <!-- Server error -->
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message_unknown">Internal error, contact the support</string>
    <string name="dialog_button_okay">OK</string>

    <string name="error_generic_message">Try the operation again!</string>
    <string name="error_network_error">There is no connection to the server. Check if the wi-fi is active!</string>
    <string name="error_network_server_timeout">Server timeout, try later!</string>
    <string name="error_server_internal">Internal error, contact the support!</string>
    <string name="error_invalid_url">Invalid URL</string>

    <!-- Error Messages -->
    <string name="error_generic">An error has occurred, contact the administrator.</string>
    <string name="error_internal_server">An internal server error has occurred, contact the administrator.</string>
    <string name="error_session_timed_out">Your session has expired, please start a new one.</string>
    <string name="error_server_unreachable">Couldn\'t reach server, check your internet connection or contact the administrator.</string>
    <string name="error_no_internet_connection">Please check your internet connection.</string>
    <string name="error_invalid_credentials">Invalid e-mail or password.</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_invalid_password">Password too short.</string>
    <string name="error_incorrect_password">Incorrect password.</string>
    <string name="error_incorrect_phone_number">Incorrect phone number.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_field_passwords_dont_match">Passwords don\'t match.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeIntro">Here you will find all the information you need  about your favorite characters, their ships and their planets</string>
    <string name="hometitle">May the force be with you</string>
    <string name="textBtnPeople">Characters</string>
    <string name="textBtnShip">Ships</string>
    <string name="textBtnPlanet">Planets</string>
    <string name="title_activity_people">PeopleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="detailBio">Biographical information</string>
    <string name="detail_born">Born</string>
    <string name="physical">Physical description</string>
    <string name="detail_species">Species</string>
    <string name="detail_gender">Gender</string>
    <string name="detail_pron">Pronouns</string>
    <string name="detail_height">Height</string>
    <string name="detail_mass">Mass</string>
    <string name="homeworld">Homeworld</string>
    <string name="detail_homeworld">Homeworld</string>

</resources>