<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/startimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/starwars"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/homelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/homeIntro"
            android:textAlignment="center"/>

        <TextView
            style="@style/bigFont"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/hometitle"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/textBtnPeople"
            android:paddingVertical="1dp"/>

        <Button
            android:id="@+id/btnShips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/textBtnShip"
            android:paddingVertical="1dp"
            android:layout_marginVertical="30dp"/>

        <Button
            android:id="@+id/btnPlanets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/textBtnPlanet"
            android:paddingVertical="1dp"/>
    </LinearLayout>

</FrameLayout>