<?xml version="1.0" encoding="utf-8"?>
<!-- activity_people.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.example.starwars.ui.people.details.PeopleDetailViewModel"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar_detail"
            android:id="@+id/appbar_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailBio"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_born"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_born"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_born}"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/physical"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_species"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_species"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_species}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_gender"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_gender}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_height"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_height}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_mass"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_mass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_mass}"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeworld"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/detail_homeworld"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/bio_homeworld"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textAlignment="textStart"
                    android:text="@{viewModel.bio_homeworld}"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>